# 2DGJK

./: .gitignore  CMakeLists.txt  README.md  package.xml
src/common/: constant.h  data.h  util.h
src/core/: gjk.h  test.cpp
src/interface/: interface.h  test.cpp
src/interface/common/: data.h  util.h
