<?xml version="1.0"?>
<package format="2">
  <name>gjk</name>
  <version>1.0.0</version>
  <description>The GJK collision detect</description>

  <maintainer email="mapengtao90@163.com">mapengtao</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <depend>geometry_msgs</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>

  <exec_depend>message_runtime</exec_depend>

  <test_depend>rosunit</test_depend>
  <test_depend>rostest</test_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>